lexikon is updated, I created a consent dialog(Einwilligung) component innerhalb der components folder, also I moved the lexikon to the top left in the shopping seznario . Later on there will be update to the contant

--- a/frontend/src/app/core/components/cockpit/cockpit.component.html
+++ b/frontend/src/app/core/components/cockpit/cockpit.component.html
@@ -1,2 +1,2 @@
 <router-outlet></router-outlet>
-<img class="lexikon-button" src="assets/lexicon.png" (click)="openDialog()" >
+<img [ngClass]="getClass()" src="assets/lexicon.png" (click)="openDialog()" >
