--- a/frontend/src/app/core/components/cockpit/cockpit.component.scss
+++ b/frontend/src/app/core/components/cockpit/cockpit.component.scss
@@ -7,3 +7,12 @@
     width: 128px;
     height: 128px;
 }
+.lexikon-button-1 {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    z-index: 1000;
+    cursor: pointer;
+    width: 128px;
+    height: 128px;
+}
