consent is added to the start page

--- a/frontend/src/app/features/start/start-button-screen/start-button-screen.component.html
+++ b/frontend/src/app/features/start/start-button-screen/start-button-screen.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-
+    <app-consent-dialog></app-consent-dialog>
     <div>
         <h1>
             Cyber Spion - Sicher unterwegs<br>
