--- a/frontend/src/app/core/components/consent/consent-dialog/consent-dialog.component.scss
+++ b/frontend/src/app/core/components/consent/consent-dialog/consent-dialog.component.scss
@@ -1,5 +1,5 @@
 .dialog-overlay {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -11,8 +11,8 @@
   opacity: 1;
   z-index: 10000;
   transition: opacity 0.3s ease;
+  color: black;
 }
-
 .dialog-content {
   width: 400px;
   height: 500px;
