--- a/frontend/src/app/core/components/consent/consent-dialog/consent-dialog.component.scss
+++ b/frontend/src/app/core/components/consent/consent-dialog/consent-dialog.component.scss
@@ -17,6 +17,7 @@
   width: 400px;
   height: 500px;
   background: white;
+  text-align: left;
   padding: 20px;
   border-radius: 8px;
   display: flex;
