--- a/frontend/src/app/core/components/consent/consent-dialog/consent-dialog.component.html
+++ b/frontend/src/app/core/components/consent/consent-dialog/consent-dialog.component.html
@@ -5,7 +5,7 @@
     <div class="dialog-body">
       <p><strong>1. Verantwortlicher</strong></p>
       <p>Die Web-App <strong>"Cyber Spion"</strong> wird betrieben von Samuel Kob, mit Sitz in Garching/TUM. 
-         Bei Fragen zum Datenschutz können Sie uns unter samuel.kob@tum.de kontaktieren.</p>
+         Bei Fragen zum Datenschutz können Sie uns unter samuel.kob&#64tum.de kontaktieren.</p>
 
       <p><strong>2. Zweck der Verarbeitung</strong></p>
       <p>Diese Web-App ist ein Spiel, das Schülern beibringt, sich in der digitalen Welt zu schützen. 
